--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -43,7 +43,7 @@ $accent-color: #776B5D;
   align-items: center;
   gap: 40px;
   max-width: 550px;
-  margin: 50px auto 0;
+  margin: 30px auto 0;
   padding: 50px;
   border-radius: 20px;
   background-color: #fff;
@@ -130,7 +130,7 @@ $accent-color: #776B5D;
       line-height: 2;
       font-size: 1.125rem;
       span {
-        font-weight: bold;
+        display: block;
       }
     }
   }
@@ -144,6 +144,26 @@ $accent-color: #776B5D;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: calc(100vh - 200px);
+    h2 {
+      &:nth-child(1) {
+        font-size: 120px;
+        line-height: 0.8;
+        text-align: left;
+        span {
+          font-size: 120px;
+        }
+      }
+      &:nth-child(2) {
+        margin: 30px 0;
+        font-size: 98px;
+        text-align: center;
+      }
+      &:nth-child(3) {
+        font-size: 120px;
+        text-align: right;
+      }
+    }
   }
 }
 
@@ -154,18 +174,87 @@ $accent-color: #776B5D;
     flex-direction: column;
     justify-content: center;
     height: calc(100vh - 200px);
-    line-height: 1;
     h2 {
       &:nth-child(1) {
-        font-size: 110px;
+        font-size: 80px;
+        line-height: 0.8;
+        text-align: center;
+        span {
+          font-size: 80px;
+        }
       }
       &:nth-child(2) {
-        font-size: 110px;
+        margin: 30px 0;
+        font-size: 65px;
+        text-align: center;
       }
       &:nth-child(3) {
-        font-size: 110px;
+        font-size: 80px;
+        text-align: center;
       }
     }
   }
 
+  .about-me {
+    p {
+      margin-top: 10px;
+      line-height: 2;
+      font-size: 12px;
+      span {
+        display: block;
+      }
+    }
+  }
+
+
+  .introduce {
+    flex-direction: column;
+    padding: 20px;
+    .photo {
+      height: 150px;
+      img {
+        width: 150px;
+      }
+    }
+    .information {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 20px;
+      ul {
+        &:first-child {
+          width: 60%;
+        }
+        &:last-child {
+          width: 40%;
+        }
+      }
+    }
+  }
+
+  .skill {
+    table {
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+    .wise {
+      .wise-ko {
+        font-size: 14px;
+      }
+      .wise-en {
+        font-size: 14px;
+      }
+    }
+    .skill-text {
+      margin-bottom: 30px;
+      p {
+        line-height: 1.5;
+        font-size: 12px;
+        span {
+          display: block;
+        }
+      }
+    }
+  }
 }
