--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -10,7 +10,7 @@ header {
   position: fixed;
   z-index: 5;
   width: 100%;
-  height: 80px;
+  height: 5rem;
   margin: 0 auto;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -26,8 +26,8 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 50px;
-        font-size: 16px;
+        gap: 3.125rem;
+        font-size: 1rem;
         li {
           a {
             position: relative;
@@ -59,15 +59,25 @@ header {
 
 /* tablet */
 @media (min-width: 600px) and (max-width: 1023px) {
-  nav {
-    padding: 0 20px;
+  header {
+    .inner {
+      justify-content: center;
+      nav {
+        padding: 0 20px;
+      }
+    }
   }
 }
 
 /* mobile */
 @media (max-width: 599px) {
-  nav {
-    padding: 0 20px;
+  header {
+    .inner {
+      justify-content: center;
+      nav {
+        padding: 0 20px;
+      }
+    }
   }
   
 }
