--- a/src/scss/portfolio.scss
+++ b/src/scss/portfolio.scss
@@ -186,6 +186,43 @@ $accent-color: #776B5D;
           color: $accent-color;
         }
       }
+      .goto-btn {
+        position: absolute;
+        bottom: 25px; right: 20px;
+        ul {
+          display: flex;
+          justify-content: right;
+          align-items: center;
+          li {
+            &:first-child {
+              margin-right: 10px;
+            }
+            a {
+              position: relative;
+              &:hover {
+                .tooltip {
+                  visibility: visible;
+                }
+              }
+              .tooltip {
+                position: absolute;
+                z-index: 1;
+                top: -105%;
+                left: 50%;
+                padding: 5px 10px;
+                font-size: .75rem;
+                font-weight: normal;
+                visibility: hidden;
+                text-align: center;
+                border-radius: 6px;
+                color: $accent-color;
+                transform: translateX(-50%);
+                background-color: rgba($color: $sub-color, $alpha: 0.5);
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
